# kipp_circ_arm

src/: view_urdf.launch
src/kipp_arm_bringup/: package.xml  setup.cfg  setup.py
src/kipp_arm_bringup/kipp_arm_bringup/: moveit_node.py
src/kipp_arm_camera/: package.xml  setup.cfg  setup.py
src/kipp_arm_description/: setup.py
src/kipp_arm_description/launch/: display.launch.py
src/kipp_arm_description/urdf/: SPEAR_Arm.urdf
src/kipp_arm_encoder/: package.xml  setup.cfg  setup.py
src/kipp_arm_encoder/kipp_arm_encoder/: kipp_arm_calibartion.py  kipp_arm_can.py  kipp_gripper_can.py
src/kipp_arm_encoder/launch/: encoder.launch.py
src/kipp_arm_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/kipp_arm_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  kipps_arm.ros2_control.xacro  kipps_arm.srdf  kipps_arm.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
src/kipp_arm_teleop/: package.xml  setup.cfg  setup.py
src/kipp_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/kipp_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  kipp_servo.yaml  kipps_arm.ros2_control.xacro  kipps_arm.srdf  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
src/kipp_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  servo.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/kipp_moveit/scripts/: keyboard_contol.py
src/kipp_servo/: package.xml  setup.cfg  setup.py
(+13 files in other folders)
